k8s/overlays/production/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: lab
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
